# Nova-Bot

./: .env  LICENSE  README.md  bot.py  pyproject.toml
novabot/: __init__.py
novabot/core/: Playwright.py  __init__.py  config_manager.py  crypto.py  db.py  on.py  types.py
novabot/core/plugins/: Playwright.py  playwright.py  service.py
novabot/core/service/: config_manager.py  database.py  model.py  scheduler.py  service.py
novabot/plugins/: withdraw.py
novabot/plugins/withdraw/: __init__.py
